--- a/Code/Css/style.css
+++ b/Code/Css/style.css
@@ -30,11 +30,12 @@ body {
   position: fixed;
 
   /* Position relative wanneer onder bepaalde pixels */
-  
+
   transform: translateY(-100%);
   transition: transform 0.5s ease;
-  background: #000;
+  background: #000; 
   display: flex;
+
   justify-content: center;
   align-items: center;
 }
@@ -53,33 +54,32 @@ body {
   position: absolute;
   display: flex;
   justify-content: center;
-  font-family: 'Tiro Telugu', serif;
   align-items: center;
   transition: all 0.4s ease;
 }
 
-.list li:nth-child(1) {    /* Home */
+.list li:nth-child(1) {
   top: 0;
   left: 0;
   background-color: #212121;
 }
 
-.list li:nth-child(2) {   /* Projects */
+.list li:nth-child(2) {
   bottom: 0;
   left: 0;
   background-color: #333;
 }
 
-.list li:nth-child(3) {    /* Blog */
+.list li:nth-child(3) {
   top: 0;
   right: 0;
-  background-color: #333;
+  background-color: #212121;
 }
 
-.list li:nth-child(4) {   /* Contact */
+.list li:nth-child(4) {
   bottom: 0;
   right: 0;
-  background-color: #212121;
+  background-color: #333;
 }
 
 .list li:nth-child(1):hover,
@@ -131,7 +131,7 @@ body {
 }
 
 .list a {
-  font-size: 1.9rem;
+  font-size: 1.99rem;
   text-decoration: none;
   color: #fff;
 }
@@ -139,15 +139,13 @@ body {
 .menu_overlay .fas {
   position: absolute;
   right: 20px;
-  padding: 20px;
   top: 20px;
   font-size: 2.5rem;
   transition: all 0.3s ease;
   z-index: 100;
 }
-
 .menu_overlay .fas:hover {
-  color: rgb(255, 102, 0);
+  color: #4b134f;
   transform: scale(1.1) rotate(180deg);
 }
 
@@ -165,9 +163,9 @@ body {
 .menu {
   position: absolute;
   right: 20px;
+  top: 20px;
   padding: 20px;
   position: fixed;
-  top: 20px;
   z-index: 99;
 }
 
@@ -180,6 +178,35 @@ body {
   color: rgb(255, 102, 0);
 }
 
+@media screen and (max-width: 750px) and (min-width: 651px) {
+  .list li a {
+    font-size: 1.4rem;
+  }
+
+  .list {
+    height: 30%;
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .list li {
+    margin-bottom: 10px;
+    position: relative;
+  }
+
+  .list a {
+    font-size: 1.4rem;
+  }
+}
 /* Nav einde */
 
 
