--- a/Code/Css/contact.css
+++ b/Code/Css/contact.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 * {
@@ -73,194 +74,193 @@ textarea {
 
 
 .menu_overlay {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    overflow: hidden;
-    color: #fff;
-    z-index: 100;
-    position: fixed;
-  
-    /* Position relative wanneer onder bepaalde pixels */
-  
-    transform: translateY(-100%);
-    transition: transform 0.5s ease;
-    background: #000; 
-    display: flex;
-  
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  font-family: 'Poppins', sans-serif;
+  height: 100vh;
+  position: absolute;
+  overflow: hidden;
+  color: #fff;
+  z-index: 100;
+  position: fixed;
+
+  /* Position relative wanneer onder bepaalde pixels */
+
+  transform: translateY(-100%);
+  transition: transform 0.5s ease;
+  background: #000; 
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.list {
+  height: 40%;
+  width: 40%;
+  position: relative;
+  list-style: none;
+}
+
+.list li {
+  height: 50%;
+  width: 50%;
+  cursor: pointer;
+  padding: 1px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.4s ease;
+}
+
+.list li:nth-child(1) {
+  top: 0;
+  left: 0;
+  background-color: #333;
+}
+
+.list li:nth-child(2) {
+  bottom: 0;
+  left: 0;
+  background-color: #333;
+}
+
+.list li:nth-child(3) {
+  top: 0;
+  right: 0;
+  background-color: #333;
+}
+
+.list li:nth-child(4) {
+  bottom: 0;
+  right: 0;
+  background-color: #333;
+}
+
+.list li:nth-child(1):hover,
+.list li:nth-child(2):hover {
+  z-index: 1;
+  animation: bounce 2s ease infinite;
+}
+
+.list li:nth-child(3):hover,
+.list li:nth-child(4):hover {
+  z-index: 1;
+  animation: bounce2 2s ease infinite;
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
   }
-  
+  25% {
+    transform: scale(1.1) rotate(10deg);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1.1) rotate(10deg);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes bounce2 {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.1) rotate(-10deg);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1.1) rotate(-10deg);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.list a {
+  font-size: 1.99rem;
+  text-decoration: none;
+  color: #fff;
+}
+
+.menu_overlay .fas {
+  position: absolute;
+  right: 40px;
+   top: 40px;
+  font-size: 2.5rem;
+  transition: all 0.3s ease;
+  z-index: 100;
+}
+.menu_overlay .fas:hover {
+  color: rgb(255, 102, 0);
+  transform: scale(1.1) rotate(180deg);
+}
+
+#menuBtn {
+  display: none;
+}
+
+.landing_page {
+  max-height: 100vh;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.menu {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  padding: 20px;
+  position: fixed;
+  z-index: 99;
+}
+
+.fas {
+  font-size: 2.4rem;
+  z-index: 99;
+  color: white;
+}
+
+.fas:hover {
+  color: rgb(255, 102, 0);
+}
+
+@media screen and (max-width: 750px) and (min-width: 651px) {
+  .list li a {
+    font-size: 1.4rem;
+  }
+
   .list {
-    height: 40%;
-    width: 40%;
-    position: relative;
-    z-index: 1;
-    list-style: none;
-  }
-  
-  .list li {
-    height: 50%;
+    height: 30%;
     width: 50%;
-    cursor: pointer;
-    padding: 1px;
-    position: absolute;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .list {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: all 0.4s ease;
-    /*jamie is een homo die houdt van ballen*/
-  }
-  
-  .list li:nth-child(1) {
-    top: 0;
-    left: 0;
-    background-color: #212121;
-  }
-  
-  .list li:nth-child(2) {
-    bottom: 0;
-    left: 0;
-    background-color: #333;
-  }
-  
-  .list li:nth-child(3) {
-    top: 0;
-    right: 0;
-    background-color: #212121;
-  }
-  
-  .list li:nth-child(4) {
-    bottom: 0;
-    right: 0;
-    background-color: #333;
-  }
-  
-  .list li:nth-child(1):hover,
-  .list li:nth-child(2):hover {
-    z-index: 1;
-    animation: bounce 2s ease infinite;
-  }
-  
-  .list li:nth-child(3):hover,
-  .list li:nth-child(4):hover {
-    z-index: 1;
-    animation: bounce2 2s ease infinite;
-  }
-  
-  @keyframes bounce {
-    0% {
-      transform: scale(1);
-    }
-    25% {
-      transform: scale(1.1) rotate(10deg);
-    }
-    50% {
-      transform: scale(1);
-    }
-    75% {
-      transform: scale(1.1) rotate(10deg);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  
-  @keyframes bounce2 {
-    0% {
-      transform: scale(1);
-    }
-    25% {
-      transform: scale(1.1) rotate(-10deg);
-    }
-    50% {
-      transform: scale(1);
-    }
-    75% {
-      transform: scale(1.1) rotate(-10deg);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  
-  .list a {
-    font-size: 1.99rem;
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  .menu_overlay .fas {
-    position: absolute;
-    right: 40px;
-    top: 40px;
-    font-size: 2.5rem;
-    transition: all 0.3s ease;
-    z-index: 100;
-  }
-  .menu_overlay .fas:hover {
-    color: #4b134f;
-    transform: scale(1.1) rotate(180deg);
-  }
-  
-  #menuBtn {
-    display: none;
-    z-index: 99;
-  }
-  
-  .landing_page {
-    max-height: 100vh;
-    height: 100%;
     width: 100%;
+  }
+
+  .list li {
+    margin-bottom: 10px;
     position: relative;
   }
-  
-  .menu {
-    position: absolute;
-    right: 20px;
-    top: 20px;
-    padding: 20px;
-    position: fixed;
-    z-index: 99;
+
+  .list a {
+    font-size: 1rem;
   }
-  
-  .fas {
-    font-size: 2.4rem;
-    z-index: 99;
-    color: white;
-  }
-  
-  .fas:hover {
-    color: rgb(255, 102, 0);
-  }
-  
-  @media screen and (max-width: 750px) and (min-width: 651px) {
-    .list li a {
-      font-size: 1.4rem;
-    }
-  
-    .list {
-      height: 30%;
-      width: 50%;
-    }
-  }
-  
-  @media screen and (max-width: 650px) {
-    .list {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-    }
-  
-    .list li {
-      margin-bottom: 10px;
-      position: relative;
-    }
-  
-    .list a {
-      font-size: 1.4rem;
-    }
-  }
+}
+
