--- a/Code/Css/style.css
+++ b/Code/Css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-color: rgb(30,30,40);
+    background-color: #212121;
     font-size: 1rem;
     color: #333;
     overflow-x: hidden;
@@ -486,6 +486,7 @@ button:hover {
   filter: brightness(0.75) saturate(1.2) contrast(0.85);
   left: 0;
   position: absolute;
+  background-color: black;
   right: 0;
   top: 0;
   transform-origin: center;
@@ -503,6 +504,9 @@ button:hover {
   left: 0;
   padding: var(--spacing-l);
   position: absolute;
+  display: flex;
+  justify-content: center;
+  color: white;
   top: 0;
 }
 
@@ -719,12 +723,43 @@ button:hover {
 }
 
 @media (max-width: 570px) {
-  .footer {
+  .footer p{
       flex-direction: column;
       row-gap: 1rem;
       padding: 20px 0;
+      color: red;
       text-align: center;
   }
 }
 
   /* Media queries einde*/
+
+
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+}
+
+
+.footer p {
+    font-size: 0.938rem;
+    color: white;
+}
+
+.social {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+}
+
+.social .bx {
+    font-size: 1.4rem;
+    color: white;
+}
+
+.social .bx:hover {
+    color: orange;
+    transition: 0.3s all linear;
+}
