--- a/Code/Css/style.css
+++ b/Code/Css/style.css
@@ -637,11 +637,32 @@ button:hover {
   text-decoration: none;
   font-size: 52px;
   position: absolute;
-  top: 13.95%;
-  right: 60%;
+  top: 6%;
   display: block;
   color: white;
 }
+
+.inhoud .fa-code {
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 52px;
+  position: absolute;
+  top: 8%;
+  display: block;
+  color: white;
+}
+
+.inhoud .fa-trello {
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 52px;
+  position: absolute;
+  top: 10%;
+  display: block;
+  color: white;
+}
+
+
 
 #overlay{
   position: absolute;
@@ -651,15 +672,17 @@ button:hover {
   height: 600vh;
   position: fixed;
   top: -2%;
-  background-color: rgba(71, 71, 71, 0.8);
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
   z-index: 99;
   justify-content: center;
 }
 
 .about-card{
-  width: 80%;
+  width: 40%;
   height: 80vh;
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
   background-color: #212121;
   margin-top: 120px;
   box-shadow: 20px 20px rgba(0,0,0,1);
@@ -718,7 +741,7 @@ button:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(71, 71, 71, 0.8);
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
   z-index: 99;
   justify-content: center;
 }
@@ -734,7 +757,7 @@ button:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(71, 71, 71, 0.8);
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
   z-index: 99;
   justify-content: center;
 }
@@ -750,7 +773,7 @@ button:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(71, 71, 71, 0.8);
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
   z-index: 99;
   justify-content: center;
 }
@@ -766,7 +789,7 @@ button:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(71, 71, 71, 0.8);
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
   z-index: 99;
   justify-content: center;
 }
@@ -782,7 +805,7 @@ button:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(71, 71, 71, 0.8);
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
   z-index: 99;
   justify-content: center;
 }
@@ -798,7 +821,7 @@ button:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(71, 71, 71, 0.8);
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
   z-index: 99;
   justify-content: center;
 }
@@ -814,11 +837,107 @@ button:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(71, 71, 71, 0.8);
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
   z-index: 99;
   justify-content: center;
 }
 
+#overlay .text-box {
+  position: absolute;
+  padding: 50px;
+  text-align: center;
+  color: white;
+  margin-top: 300px;
+}
 
 
+.container-card{
+  width: 1000px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container-card .card{
+  position: relative;
+  cursor: pointer;
+}
+
+.container-card .card .face{
+  width: 300px;
+  height: 200px;
+  transition: 0.5s;
+}
+
+.container-card .card .face.face1{
+  position: relative;
+  background: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(100px);
+}
+
+.container-card .card:hover .face.face1{
+  background: #ff0057;
+  transform: translateY(0);
+}
+
+.container-card .card .face.face1 .content{
+  opacity: 0.2;
+  transition: 0.5s;
+}
+
+.container-card .card:hover .face.face1 .content{
+  opacity: 1;
+}
+
+.container-card .card .face.face1 .content img{
+  max-width: 100px;
+}
+
+.container-card .card .face.face1 .content h3{
+  margin: 10px 0 0;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.container-card .card .face.face2{
+  position: relative;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+  transform: translateY(-100px);
+}
+
+.container-card .card:hover .face.face2{
+  transform: translateY(0);
+}
+
+.container-card .card .face.face2 .content p{
+  margin: 0;
+  padding: 0;
+}
+
+.container-card .card .face.face2 .content a{
+  margin: 15px 0 0;
+  display:  inline-block;
+  text-decoration: none;
+  font-weight: 900;
+  color: #333;
+  padding: 5px;
+  border: 1px solid #333;
+}
+
+.container-card .card .face.face2 .content a:hover{
+  background: #333;
+  color: #fff;
+}
 
