--- a/Code/Css/contact.css
+++ b/Code/Css/contact.css
@@ -12,8 +12,10 @@
 }
 
 body {
+  overflow: hidden;
   font-family: 'Poppins', sans-serif;
-    background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
+  height: 100vh;
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
 }
 
 /* Menu overlay */
@@ -112,7 +114,7 @@ body {
   position: absolute;
   right: 40px;
   cursor: pointer;
-  top: 40px;
+  top: 50px;
   font-size: 2.5rem;
   transition: all 0.3s ease;
   z-index: 100;
@@ -158,16 +160,152 @@ body {
 /* Menu overlay einde */
 
 
+section {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin: -135px -180px;
+  width: 360px;
+  min-height: 270px;
+  font-size: 35px;
+  text-align: center;
+}
+
+.ss__a {
+  display: inline-block;
+  position: relative;
+  float: left;
+  width: 80px;
+  height: 80px;
+  margin: 5px;
+}
+
+article {
+  cursor: pointer;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  box-shadow: 0 0 6px -2px #000, 0 0 45px -20px #000;
+  color: #fff;
+  line-height: 90px;
+  transform: perspective(300px) rotateY(0deg);
+  transition: transform 0.4s linear, background-color 0s linear 0.2s, color 0s linear 0.2s;
+}
+
+a:hover article {
+  transform: perspective(300px) rotateY(180deg);
+  color: #eee;
+  transition: transform 0.2s linear, background-color 0s linear 0.1s, color 0s linear 0.1s;
+}
+
+a:nth-child(1):hover article {
+  color: #333;
+  background-color: #f5f5f5;
+}
+
+a:nth-child(2):hover article {
+  background-color: #FF0000;
+}
+
+a:nth-child(3):hover article {
+  background-color: #1DA1F2;
+}
+
+a:nth-child(4):hover article {
+  background-color: #CB2027;
+}
+
+a:nth-child(5):hover article {
+  background-color: #833AB4;
+}
+
+a:nth-child(6):hover article {
+  background-color: #ea4335;
+}
+
+a:nth-child(7):hover article {
+  background-color: #0e76a8;
+}
+
+a:nth-child(8):hover article {
+  background-color: #075E54;
+}
+
+a:nth-child(9):hover article {
+  background-color: #A82400;
+}
+
+a:nth-child(10):hover article {
+  background-color: #FF5700;
+}
+
+a:nth-child(11):hover article {
+  background-color: #f57d00;
+}
+
+a:nth-child(12):hover article {
+  background-color: #86c9ef;
+}
+
+span {
+  transition: transform 0s linear 0.2s, text-shadow 0s linear 0.2s;
+  display: block;
+  -webkit-font-smoothing: subpixel-antialiased;
+  font-smoothing: antialiased;
+}
+
+a:hover span {
+  transition: transform 0s linear 0.1s, text-shadow 0s linear 0.1s;
+  transform: scale(-1, 1);
+  text-shadow: 0 0 50px rgba(255, 255, 255, 0.5);
+}
+
+@font-face {
+  font-family: "SSSocial";
+  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/ss-social-regular.eot");
+  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/ss-social-regular.eot?#iefix") format("embedded-opentype"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/ss-social-regular.woff") format("woff"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/ss-social-regular.ttf") format("truetype"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/ss-social-regular.svg#SSSocialRegular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* This triggers a redraw in IE to Fix IE8's :before content rendering. */
+html:hover [class^="ss-"] {
+  -ms-zoom: 1;
+}
+
+.ss-icon, .ss-icon.ss-social, .ss-icon.ss-social-circle, [class^="ss-"]:before, [class*=" ss-"]:before, [class^="ss-"][class*=" ss-social"]:before, [class*=" ss-"][class*=" ss-social"]:before, [class^="ss-"].right:after, [class*=" ss-"].right:after, [class^="ss-"][class*=" ss-social"].right:after, [class*=" ss-"][class*=" ss-social"].right:after {
+  font-family: "SSSocial";
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: none;
+  text-rendering: optimizeLegibility;
+  white-space: nowrap;
+  -moz-font-feature-settings: "liga=1";
+  -moz-font-feature-settings: "liga";
+  -ms-font-feature-settings: "liga"1;
+  -o-font-feature-settings: "liga";
+  font-feature-settings: "liga";
+  -webkit-font-smoothing: antialiased;
+}
+
+.ss-icon.ss-social-circle, [class^="ss-"].ss-social-circle:before, [class*=" ss-"].ss-social-circle:before, [class^="ss-"].ss-social-circle.right:after, [class*=" ss-"].ss-social-circle.right:after {
+  font-weight: bold;
+}
+
+[class^="ss-"].right:before, [class*=" ss-"].right:before {
+  display: none;
+  content: '';
+}
+
+
 /* Footer */
 
 .footer {
-  position: relative;
-  margin-top: 0px;
-  bottom: 70px;
+  margin-top: 400px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 50px 50px;
+  justify-content: center;
 }
 
 .footer p {
@@ -178,124 +316,8 @@ body {
 
 /* Footer einde */
 
-.container-social {
-  display: grid;
-  margin: auto;
-<<<<<<< HEAD
-  padding: 100px;
- 
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-=======
-  width: 80%;
-  padding: 100px;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 2fr))
->>>>>>> 1da138ea7872ed21ae9d1ba3d505315da394684c
-}
-
-
-.fa:hover{
-    opacity: 0.7;
-}
-.fa-facebook{
-    background-color: #3b5998;
-    color: white;
-}
-.fa-twitter{
-    background-color: #55acee;
-    color: white;
-}
-.fa-google{
-    background-color: #dd4b39;
-    color: white;
-}
-.fa-linkedin{
-    background-color: #007bb5;
-    color: white;
-
-}
-.fa-youtube{
-    background-color: #bb0000;
-    color: white;
-}
-.fa-instagram{
-    background-color: #C13584;
-    color: white;
-
-}
-.fa-pinterest{
-    background-color: #cb2027;
-    color: white;
-}
-.fa-trello{
-    background-color: #125688	;
-    color: white;
-}
-.fa-github {
-    background-color: #333;
-    color: white;
-
-}
-.fa-twitch{
-    background-color: #6441a5;
-    color: white;
-}
-.fa-skype{
-    background-color: #009EDC;
-    color: white;
-
-}
-.fa-vimeo{
-    background-color: #45bbff;
-    color: white;
-}
-.fa-tumblr{
-    background-color: #2c4762;
-    color: white;
-}
-.fa-reddit{
-    background-color: #FF5700;
-    color: white;
-}
-.fa-deviantart{
-    background-color: #4e6252;
-    color: white;
-}
-.fa-quora{
-    background-color: #B92B27;
-    color: white;
-
-}
-.fa-discord{
-    background-color: #7289da;
-    color: white;
-}
-.fa-tiktok{
-    background-color: #430297;
-    color: white;
-
-}
 
 /* Media querries */
-
-@media (max-width: 686px) {
-  form {
-    padding-left: 60px;
-    margin-left: 50px;
-  }
-}
-
-@media (max-width: 570px) {
-  .footer {
-      flex-direction: column;
-      row-gap: 1rem;
-      padding: 20px 0;
-      text-align: center;
-  }
-}
 
 @media screen and (max-width: 750px) and (min-width: 651px) {
   .list li a {
